--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -5,6 +5,11 @@
    min-height: 100vh;
 }
 
+.landing-logo {
+   transform: translate(30%, 50%);
+   height: 100px;
+}
+
 .login-box {
    width: 280px;
    position: absolute;
@@ -41,10 +46,25 @@
    color: $white;
    padding: 5px;
    font-size: 18px;
+   color: $white;
 }
+
+.landing-button:hover {
+   color: $white;
+   font-weight: bolder;
+}
+
+// .button2:hover {
+//    box-shadow: 0 12px 16px 0 rgba(250, 248, 248, 0.24),
+//       0 17px 50px 0 rgba(248, 246, 246, 0.19);
+// }
 
 p {
    color: $gray-100;
+}
+
+.logo {
+   height: 80px;
 }
 
 // .sideNav {
